--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-flet>=0.25.0
-sounddevice>=0.5.1
-soundfile>=0.12.1
-numpy>=1.24.0
-flet_audio_recorder>=0.1.0
+flet
+flet-audio-recorder
+numpy
+tflite-runtime
