--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -2,8 +2,7 @@ name: Build Android APK
 
 on:
   push:
-    # This asterisk means "Run on ANY branch you push"
-    branches: [ "*" ] 
+    branches: [ "**" ]
   workflow_dispatch:
 
 jobs:
@@ -19,19 +18,17 @@ jobs:
       with:
         python-version: '3.12'
 
-    - name: Install Python Dependencies
-      # We removed 'scipy' to save build time, assuming you aren't using it heavily
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        # We install Flet here. This provides the correct CLI.
         pip install flet flet-audio-recorder numpy ai-edge-litert
 
-    - name: Setup Flet
-      run: curl -fsSL https://flet.dev/install | bash
+    
 
     - name: Build APK
-      # We use --verbose to see if the AI library loads correctly
-      run: |
-        flet build apk --include-packages ai_edge_litert --verbose
+      # The pip-installed 'flet' will automatically download the Android SDKs it needs.
+      run: flet build apk --include-packages ai_edge_litert --verbose
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
