--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -27,8 +27,9 @@ jobs:
     
 
     - name: Build APK
-      
-      run: flet build apk --verbose
+
+      # We pipe 'yes' into the command so it auto-accepts the install prompt
+      run: yes | flet build apk --verbose
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
