--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -26,26 +26,33 @@ jobs:
       with:
         python-version: '3.11'
 
-    # 3. Install Flet & Dependencies
+    # 3. Setup Flutter (REQUIRED for Flet 0.22.1 builds)
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.19.6' # Matches the Flet 0.22.x era
+        channel: 'stable'
+
+    # 4. Install Flet & Dependencies
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
         # Pinning Flet to 0.22.1 forces the Python 3.11 build chain
         pip install flet==0.22.1 flet-audio-recorder numpy tflite-runtime
 
-    # 4. Install Linux Dependencies (Fixes the GTK error)
+    # 5. Install Linux Dependencies (Fixes the GTK error)
     - name: Install Linux Dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libblkid-dev liblzma-dev
 
-    # 5. Accept Android Licenses (The Critical Fix)
+    # 6. Accept Android Licenses (The Critical Fix)
     # We use the system's SDK Manager to sign the licenses before Flet tries to run.
     - name: Accept Android Licenses
       run: |
         yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses || echo "Failed to accept licenses via sdkmanager, proceeding anyway..."
 
-    # 6. Build APK
+    # 7. Build APK
     # We still pipe 'yes' just in case Flet needs to confirm the Flutter install again.
     - name: Build APK
       run: yes | flet build apk --verbose
