--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -33,12 +33,12 @@ jobs:
         flutter-version: '3.19.6' # Matches the Flet 0.22.x era
         channel: 'stable'
 
-    # 4. Install Flet & Dependencies
+    # 4. Install Python Dependencies
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        # Pinning Flet to 0.22.1 forces the Python 3.11 build chain
-        pip install flet==0.22.1 flet-audio-recorder numpy tflite-runtime
+        # Use -r requirements.txt to respect the pinned numpy version
+        pip install -r requirements.txt
 
     # 5. Install Linux Dependencies (Fixes the GTK error)
     - name: Install Linux Dependencies
