--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 flet==0.22.1
 flet-audio-recorder
 numpy==1.24.4
-tflite-runtime
+#tflite-runtime
+# Pivoting to onnxruntime via opencv
+opencv-python 
