--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -33,11 +33,13 @@ jobs:
         flutter-version: '3.19.6' # Matches the Flet 0.22.x era
         channel: 'stable'
 
-    # 4. Install Python Dependencies
+    # 5. Install Python Dependencies
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        # Use -r requirements.txt to respect the pinned numpy version
+        # 1. Install Numpy FIRST to lock the version
+        pip install "numpy==1.24.4"
+        # 2. Install the rest, which will now see Numpy is already satisfied
         pip install -r requirements.txt
 
     # 5. Install Linux Dependencies (Fixes the GTK error)
