--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -13,12 +13,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # 1. Setup Java 11 (Required for older Android Builds)
     - name: Setup Java
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
-        java-version: '11'
+        java-version: '17' 
+
 
     # 2. Setup Python
     - name: Setup Python
@@ -33,32 +33,19 @@ jobs:
         flutter-version: '3.19.6' # Matches the Flet 0.22.x era
         channel: 'stable'
 
-    # 5. Install Python Dependencies
-    - name: Install Python Dependencies
+    - name: Install Android NDK
       run: |
-        python -m pip install --upgrade pip
-        # Install exactly what is in requirements.txt
-        pip install -r requirements.txt
+        # NDK 25b or 26b are usually safest for Flet 0.22
+        sdkmanager "ndk;25.2.9519653"
+        echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
 
-    # 5. Install Linux Dependencies (Fixes the GTK error)
-    - name: Install Linux Dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgtk-3-dev libblkid-dev liblzma-dev
-
-    # 6. Accept Android Licenses (The Critical Fix)
-    # We use the system's SDK Manager to sign the licenses before Flet tries to run.
-    - name: Accept Android Licenses
-      run: |
-        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses || echo "Failed to accept licenses via sdkmanager, proceeding anyway..."
-
-    # 7. Build APK
-    # We still pipe 'yes' just in case Flet needs to confirm the Flutter install again.
     - name: Build APK
-      run: yes | flet build apk --verbose
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-release
-        path: build/apk/app-release.apk
+      env:
+        # These help some C-extensions find the right cross-compiler
+        CC: aarch64-linux-android24-clang
+        CXX: aarch64-linux-android24-clang++
+      run: |
+        # We add --no-cache-dir to ensure we don't grab a half-baked build
+        # and we explicitly tell flet to include these packages
+        flet build apk --verbose \
+          --include-packages flet_audio_recorder,numpy,opencv-python-headless
