--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,53 +1,14 @@
-name: Build Android APK
-
-on:
-  push:
-    branches: [ "**" ]
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup Java 17
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.19.6'
-        channel: 'stable'
-
-    - name: Install Android NDK & Accept Licenses
+- name: Build APK
+      env:
+        ANDROID_NDK: ${{ env.ANDROID_NDK_HOME }}
+        CC: ${{ env.ANDROID_NDK_HOME }}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android24-clang
+        CXX: ${{ env.ANDROID_NDK_HOME }}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android24-clang++
       run: |
-        # Use the absolute path to sdkmanager
-        SDK_MANAGER=$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager
+        python -m pip install flet==0.22.1
         
-        echo "y" | $SDK_MANAGER --licenses
-        $SDK_MANAGER "ndk;25.2.9519653"
-        
-        # Set NDK path for the build environment
-        echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
-
-    - name: Install Flet
-      run: |
-        python -m pip install --upgrade pip
-        pip install flet==0.22.1
-
-    - name: Build APK
-      run: |
-        # We pass the environment variables directly to ensure the C-compiler for Android is used
+        # We use separate --include-packages flags to prevent the comma-parsing error
+        # and ensure the environment variables are active
         flet build apk --verbose \
-          --include-packages flet-audio-recorder,numpy==1.25.2,opencv-python-headless==4.8.0.74
+          --include-packages flet-audio-recorder \
+          --include-packages numpy==1.25.2 \
+          --include-packages opencv-python-headless==4.8.0.74
