--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,4 +1,52 @@
-- name: Build APK
+name: Build Android APK
+
+on:
+  push:
+    branches: [ "**" ]
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Java 17
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.19.6'
+        channel: 'stable'
+
+    - name: Install Android NDK & Accept Licenses
+      run: |
+        # Use the absolute path to sdkmanager
+        SDK_MANAGER=$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager
+        
+        echo "y" | $SDK_MANAGER --licenses
+        $SDK_MANAGER "ndk;25.2.9519653"
+        
+        # Set NDK path for the build environment
+        echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
+
+    - name: Install Flet
+      run: |
+        python -m pip install --upgrade pip
+        pip install flet==0.22.1
+
+    -- name: Build APK
       env:
         ANDROID_NDK: ${{ env.ANDROID_NDK_HOME }}
         CC: ${{ env.ANDROID_NDK_HOME }}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android24-clang
